# construct-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/: company.py  control_materials.py  nfc.py  objects.py  remarks.py  routers.py  users.py  violations.py
app/config/: main.py
app/dependencies/: unitofwork.py  users.py
app/exceptions/: api.py  bad_request.py  base.py  company.py  control_materials.py  files.py  forbidden.py  images.py  nfc.py  objects.py  remarks.py  users.py  violations.py
app/migrations/: env.py
app/migrations/versions/: 49ddb555efb4_init.py  582454c9fda3_init4.py  5be1b7517951_init.py  (+6 more)
app/mock/: mock.py  mock_categories_materials.json  mock_companies.json  mock_object_categories.json  mock_users.json  mock_users_dev.json  mock_users_object_access.json
app/models/: company.py  control_materials.py  enums.py  nfc.py  objects.py  remarks.py  users.py  violations.py
app/repositories/: api.py  base.py  company.py  control_materials.py  images.py  nfc.py  objects.py  remarks.py  users.py  violations.py
app/schemas/: base.py  company.py  control_materials.py  nfc.py  objects.py  remarks.py  users.py  violations.py
app/services/: company.py  control_materials.py  nfc.py  objects.py  remarks.py  users.py  violations.py
app/utils/: create_geom.py  generate_nfc_uid.py  generate_using_id.py  nfc_label.py  s3.py
app/wrappers/: api.py
environments/: .env.dev.docker
nginx/: nginx_prod.conf
